[tool.poetry]
name = "advent-of-code-23"
version = "0.1.0"
description = "Solutions for the advent of code 2023"
authors = ["Christian Friedow <christian@friedow.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
